# rental

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  DEPLOY_RAILWAY.md  DISEÑO_SPECS.md  Dockerfile  MANIFIESTO.md  MEJORAS.md  README.md  dev.sh  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  railway.json  vercel.json  vite.config.ts
.claude/: .gitignore  governance.config.mjs  launch.json  settings.json  skill-ledger.jsonl  skill-template.md
.github/: PULL_REQUEST_TEMPLATE.md
.lovable/: plan.md
backend/: .env.example  .venv  admin_guard.py  backup_cron.py  config.py  database.py  db_backup.json  logging_config.py  main.py  middleware.py  migrate_to_postgres.py  migration_state.py  net_utils.py  pdf.py  pdf_templates.py  pytest.ini  rate_limit.py  requirements-dev.txt  requirements.txt  ruff.toml  run_local.sh  supabase_auth.py  tipos_pedido.py
backend/arca_fe/: FEATURES.md  README.md  TRAMITES_AFIP.md  __init__.py  _ssl_afip.py  asyncio_support.py  comprobante.py  comprobante_exportacion.py  ejemplos.py  errores.py  modelos.py  modelos_exportacion.py  padron.py  pdf.py  pyproject.toml  qr.py  render.py  render_exportacion.py  retry.py  seguridad.py  validadores.py  wsaa.py  wsfe.py  wsfex.py
backend/arca_fe/assets/fonts/: LICENSE-fonts.txt
backend/arca_fe/tests/: test_asyncio_support.py  test_comprobante.py  test_comprobante_exportacion.py  test_ejemplos.py  test_modelos.py  test_modelos_exportacion.py  test_padron.py  test_pdf.py  test_portabilidad.py  test_qr.py  test_render.py  test_render_exportacion.py  test_retry.py  test_seguridad.py  test_validadores.py  test_wsaa_firma.py  test_wsfe_param.py  test_wsfex.py
dev/: api-fixtures-plugin.ts  gen-fixtures.mjs
docs/: AUDITORIA_FLUJOS_2026-06-08.md  AUDIT_DESIGN_SYSTEM.md  AUDIT_RESERVA_EDGE_CASES.md  AUDIT_UI_MULTIVIEWPORT.md  BH_LUCES_DATASET.md  BUGS.md  CAMPAÑA_FEATURES.md  DATASET_CAMARAS.md  DATASET_ILUMINACION.md  DATASET_LENTES.md  DATASET_MODIFICADORES.md  DECISIONES.md  DEPLOY_RAILWAY.md  DESIGN_SYSTEM.md  DISEÑO_SPECS.md  FLUJO_PEDIDOS.md  GUIA_ARCA_CERT.md  ISSUE_LABELS.md  MARCA.md  MEJORAS.md  MEMORIA.md  MOBILE.md  MOBILE_AUDIT.md  PLAN_SPECS_INGESTA.md  PLAN_SPECS_REDISENO.md  PROPUESTAS_SKILLS.md  PROTOCOLO.md  README.md  RUNBOOK_CLOUDFLARE.md  RUNBOOK_MIGRACIONES.md  SISTEMA_ARCA.md  SISTEMA_AUTH.md  SISTEMA_CARRITO.md  SISTEMA_CHECKOUT.md  SISTEMA_COMUNICACION.md  SISTEMA_CONTENIDO.md  SISTEMA_FACTURACION.md  SISTEMA_FINANZAS_FLUJO.md  SISTEMA_FOTOS.md  SISTEMA_IDENTITY.md  (+24 more)
e2e/: admin-equipos-form.spec.ts  booking.desktop.spec.ts  booking.mobile.spec.ts
frontend/: .size-limit.json  components.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
public/: robots.txt
scripts/: build-changelog.ts  changelog-draft.sh  check-docs.mjs  check-no-content-images.mjs  check-route-outlets.mjs  ds-thumbs.mjs  e2e-stack.sh  pre-promote.sh
src/: ds-styles.css  main.tsx  routeTree.gen.ts  styles.css
supabase/: config.toml
tools/: README.md  bh_luz_normalizar.py  bh_luz_parser.py  bh_luz_patches.py  bh_luz_rebuild.sh  booqable_export.py  booqable_match_equipos.py  booqable_to_alquileres.py  booqable_to_clientes.py  camaras_normalizar.py  camaras_parser.py  camaras_patches.py  camaras_rebuild.sh  equipos_match_preview.py  iluminacion_normalizar.py  iluminacion_parser.py  iluminacion_patches.py  iluminacion_rebuild.sh  lentes_normalizar.py  lentes_parser.py  lentes_patches.py  lentes_rebuild.sh  modificadores_parser.py  modificadores_rebuild.sh  (+2 more)
(+1873 files in other folders)
